@startuml
left to right direction
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam defaultFontSize 11
skinparam class {
    BackgroundColor #F8F9FA
    BorderColor #495057
    ArrowColor #495057
    HeaderBackgroundColor #D0E8FF
}
skinparam packageStyle rectangle

package "Métriques" {

    class RealtimeMetric {
        + id : BigAutoField (PK)
        + queue : CharField(200)
        + account : CharField(100)
        + language : CharField(10)
        + hour : CharField(5)
        + day_of_week : CharField(20)
        --
        + offered : IntegerField
        + abandoned : IntegerField
        + answered : IntegerField
        + in_queue : IntegerField
        + agents_available : IntegerField
        + agents_busy : IntegerField
        + callback_contacts : IntegerField
        --
        + sla_rate : FloatField
        + abandon_rate : FloatField
        + answer_rate : FloatField
        + avg_handle_time : FloatField
        + avg_answer_time : FloatField
        + target_ans_rate : FloatField
        + target_abd_rate : FloatField
        --
        + timeframe_bh : IntegerField
        + abd_in_sla : FloatField
        + ans_in_sla : FloatField
        + abd_out_sla : FloatField
        + ans_out_sla : FloatField
        + is_ooh : BooleanField
        + sla_config_id : BigIntegerField (FK)
        + created_at : DateTimeField (tz)
    }

    class HistoricalMetric {
        + id : AutoField (PK)
        + queue : CharField
        + account : CharField
        + language : CharField
        + start_date : DateTimeField (tz)
        + end_date : DateTimeField (tz)
        --
        + offered : IntegerField
        + abandoned : IntegerField
        + answered : IntegerField
        + ans_in_sla : FloatField
        + abd_in_sla : FloatField
        + abd_out_sla : FloatField
        + ans_out_sla : FloatField
        --
        + sla_rate : FloatField
        + abandon_rate : FloatField
        + answer_rate : FloatField
        + avg_handle_time : FloatField
        + avg_answer_time : FloatField
        + average_hold_time : FloatField
        + avg_ttc : FloatField
        + total_answer_time : FloatField
        + total_hold_time : FloatField
        --
        + target_ans_rate : FloatField
        + target_abd_rate : FloatField
        + sla_compliant : BooleanField
        + abd_compliant : BooleanField
        + is_ooh : BooleanField
        + sla_config_id : IntegerField (FK)
    }

    RealtimeMetric "1..*" ..> "1..*" HistoricalMetric : "archivé vers\n(APScheduler 23:59)"
}

package "Configuration & Prédiction" {

    class SLAConfig {
        + id : AutoField (PK)
        + account : CharField
        + ans_rate_formula : CharField
        + abd_rate_formula : CharField
        + timeframe_bh : IntegerField
        + ooh : IntegerField
        + ans_sla : CharField
        + abd_sla : CharField
        + target_ans_rate : FloatField
        + target_abd_rate : FloatField
        + target_other_rate : FloatField
        + created_at : DateTimeField
        + updated_at : DateTimeField
    }

    class ForecastResult {
        + id : AutoField (PK)
        + queue : CharField
        + horizon : CharField
        + forecast_date : DateTimeField
        + predicted : IntegerField
        + lower : IntegerField
        + upper : IntegerField
        + is_weekend : BooleanField
        + is_holiday : BooleanField
        + generated_at : DateTimeField
    }
}

package "Agrégats" {

    class AccountSummary {
        + id : AutoField (PK)
        + account : CharField
        + offered : IntegerField
        + abandoned : IntegerField
        + answered : IntegerField
        + ans_in_sla : IntegerField
        + abd_in_sla : IntegerField
        + sla_rate : IntegerField
        + abandon_rate : IntegerField
        + answer_rate : IntegerField
        + avg_handle_time : IntegerField
        + avg_answer_time : IntegerField
        + avg_ttc : IntegerField
        + target_ans_rate : IntegerField
        + target_abd_rate : IntegerField
        + timeframe_bh : IntegerField
        + updated_at : DateTimeField
    }
}

' Relations
RealtimeMetric "1..*" --> "1" SLAConfig : "sla_config_id (FK)"
HistoricalMetric "1..*" --> "1" SLAConfig : "sla_config_id (FK)"
HistoricalMetric "1..*" --> "1..*" AccountSummary : "agrégé dans"
HistoricalMetric "1..*" ..> "1..*" ForecastResult : "alimente"

@enduml